<resources>
    <string name="app_name">Inventory App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="imageDescription">Image used on app</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailAddress">Email Address</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="cardDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor id aliquet lectus proin nibh nisl condimentum id. Hac habitasse platea dictumst quisque sagittis purus. Enim tortor at auctor urna nunc id. Dui nunc mattis enim ut tellus elementum sagittis.</string>
    <string name="noText">" "</string>
    <string name="permissionsDescription">This application requires access to the following features.</string>
</resources>